# llm-cps-ac

./: README.md
case-study-1/14/Archive/: main · Streamlit - http___localhost_8501_.html
case-study-1/14/Archive/main · Streamlit - http___localhost_8501__files/: analytics.min.js  content-script.js  index(1).html  (+15 more)
case-study-2/: LLM controller system chat.tex
llm-cps-ac/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
llm-cps-ac/src/: README.MD  run_all.py  run_all_docker.py
llm-cps-ac/src/chatbot/: .dockerignore  README.MD  main.py
llm-cps-ac/src/chatbot/app/: config.py  functions.py  functions_definitions.json  handler.py  sql_db.py  vector_db.py
llm-cps-ac/src/chatbot/data/: FAQ.txt
llm-cps-ac/src/chatbot/docker/: Dockerfile  build.py  requirements.txt  run.py
llm-cps-ac/src/demonstration/: README.MD
llm-cps-ac/src/demonstration/langchain/: README.MD  langchain_example.py
llm-cps-ac/src/demonstration/langchain/json_explorer/: json_explorer.py  users.json
llm-cps-ac/src/demonstration/openai_func_calling/: README.MD  openai_func_calling_example.py  openai_func_calling_weather.py  weather.py
llm-cps-ac/src/simulator/: .dockerignore  README.MD  main.py
llm-cps-ac/src/simulator/app/: boiler.py  building.py  constants.py  instances.py  models.py  regulator.py  routes.py  simulator.py  weather.py
llm-cps-ac/src/simulator/app/static/: index.html
llm-cps-ac/src/simulator/docker/: Dockerfile  build.py  requirements.txt  run.py
llm-cps-ac/src/simulator/test/: README.MD  test_heating_simulator.py
llm-cps-ac/utils/: utils.md
